food페이지추가

--- a/food.html
+++ b/food.html
@@ -1,1 +1,66 @@
-    
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./css/food.css"
+    />
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <title>Food In Jeju</title>
+  </head>
+  <body>
+    <div class="wrap">
+      <h1><span>Food In Jeju</span></h1>
+      <ul class="auto">
+        <li class="btnStart"><span class="material-icons"> play_arrow </span></i></li>
+        <li class="btnStop"><span class="material-icons">
+            stop
+            </span></li>
+      </ul>
+      <div class="swiper-wrapper">
+          <!-- <div class="swiper-slide">
+              <div class="inner">
+                  <div class="con">
+                      <img src="img/pizza.jpg"/>
+                      <h2>pizza</h2>
+                      <p>뉴욕 피자~</p>
+                  </div>
+              </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="inner"></div>
+        </div>
+        <div class="swiper-slide">
+            <div class="inner"></div>
+        </div>
+        <div class="swiper-slide">
+            <div class="inner"></div>
+        </div>
+        <div class="swiper-slide">
+            <div class="inner"></div>
+        </div>
+        <div class="swiper-slide">
+            <div class="inner"></div>
+        </div> -->
+      </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+
+      <div class="swiper-pagination"></div>
+    </div>
+  </body>
+  <script src="./js/food.js"></script>
+</html>
