--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Page Title</title>
+    <title>Jeju_main</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -20,7 +20,7 @@
     <div class="wrap">
       <span class="material-icons"> flight_takeoff </span>
       <p class="large-text dynamic" id="dynamic"></p>
-      <p class="small-text"><a href="#">Natural</a> | <a href="#">Food</a> </p>
+      <p class="small-text"><a href="food.html">Natural</a> | <a href="food.html">Food</a> </p>
     </div>
   </body>
   <script src="./js/main.js"></script>
