--- a/food.html
+++ b/food.html
@@ -18,6 +18,10 @@
       media="screen"
       href="./css/food.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@300&display=swap" rel="stylesheet">
+
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <title>Food In Jeju</title>
   </head>
