--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="wrap">
       <span class="material-icons"> flight_takeoff </span>
       <p class="large-text dynamic" id="dynamic"></p>
-      <p class="small-text"><a href="food.html">Natural</a> | <a href="food.html">Food</a> </p>
+      <p class="small-text"><a href="natural.html">← Natural</a> | <a href="food.html">Food →</a> </p>
     </div>
   </body>
   <script src="./js/main.js"></script>
